@@ -13,5 +13,5 @@ CXXFLAGS = @CXXFLAGS_NODEBUG@
 
 noinst_LTLIBRARIES = libforeign.la
 
-libforeign_la_SOURCES = dehydration.cpp orb.cpp pyforeign.cpp snappea.cpp
+libforeign_la_SOURCES = csvsurfacelist.cpp dehydration.cpp orb.cpp pyforeign.cpp snappea.cpp
 
