@@ -26,15 +26,36 @@
 
 /* end stub */
 
-void addForeignCSVSurfaceList();
-void addForeignDehydration();
-void addForeignOrb();
-void addForeignSnapPea();
+#include "foreign/csvsurfacelist.h"
+#include "surfaces/nnormalsurfacelist.h"
+#include <boost/python.hpp>
 
-void addForeign() {
-    addForeignCSVSurfaceList();
-    addForeignDehydration();
-    addForeignOrb();
-    addForeignSnapPea();
+using namespace boost::python;
+
+namespace {
+    BOOST_PYTHON_FUNCTION_OVERLOADS(OL_writeCSVStandard,
+        regina::writeCSVStandard, 2, 3);
+    BOOST_PYTHON_FUNCTION_OVERLOADS(OL_writeCSVEdgeWeight,
+        regina::writeCSVEdgeWeight, 2, 3);
+}
+
+void addForeignCSVSurfaceList() {
+    def("writeCSVStandard", regina::writeCSVStandard,
+        OL_writeCSVStandard());
+    def("writeCSVEdgeWeight", regina::writeCSVEdgeWeight,
+        OL_writeCSVEdgeWeight());
+
+    enum_<regina::SurfaceExportFields>("SurfaceExportFields")
+        .value("surfaceExportName", regina::surfaceExportName)
+        .value("surfaceExportEuler", regina::surfaceExportEuler)
+        .value("surfaceExportOrient", regina::surfaceExportOrient)
+        .value("surfaceExportSides", regina::surfaceExportSides)
+        .value("surfaceExportBdry", regina::surfaceExportBdry)
+        .value("surfaceExportLink", regina::surfaceExportLink)
+        .value("surfaceExportType", regina::surfaceExportType)
+        .value("surfaceExportNone", regina::surfaceExportNone)
+        .value("surfaceExportAllButName", regina::surfaceExportAllButName)
+        .value("surfaceExportAll", regina::surfaceExportAll)
+    ;
 }
 
